--- a/tutorial2c.html
+++ b/tutorial2c.html
@@ -13,15 +13,29 @@
   <script src="https://unpkg.com/three@0.131.3/examples/js/controls/OrbitControls.js"></script>
   <script src="variable.js"></script>
   <script src="moji.js"></script>
+  <script src="displayBtn.js"></script>
   <script src="botejin.js"></script>
   <script src="title.js"></script>
   <script src="select.js"></script>
   <script src="game.js"></script>
+  <script src="gameModef.js"></script>
   <script src="script.js"></script>
   <div id="canvas-frame">
-    <a id = "start-btn" class="btn" onclick="selectInit()" style="display: block;">START</a>
-    <!-- <a id = "music-btn" class="btn" onclick="initAudio()" style="display: block;">play</a> -->
-    
+    <a id = "start-btn" class="btn" onclick="modeInit()" style="display: block;">はじめる</a>
+    <a id = "music-btn" class="btn" onclick="initAudio(1)">おんがく</a>
+    <div id="mode" style="display: none;">
+      <div class="guide">
+        モードをえらぼう
+      </div>
+      <div id="md-btn">
+        <a id="auto-btn" class="btn" onclick="selectInit(1)">
+          おーと
+        </a>
+        <a id="free-btn" class="btn" onclick="selectInit(2)">
+          ふりー
+        </a>
+      </div>
+    </div>
     <div id="select" style="display: none;">
       <div class="guide">
         キャラクターをえらぼう
@@ -33,13 +47,19 @@
     </div>
     <div class="reset">
       <a id = "reset-btn" class="btn" onclick="resetCamera()" style="display: none;">Reset Camera</a>
-      <a id = "reset-btn2" class="btn" onclick="resetObject()" style="display: none;">Reset<br>Object</a>  
+      <a id = "reset-btn2" class="btn" onclick="resetObject()" style="display: none;">Reset Object</a>  
     </div>
+    <div id="mode">
+      <div id="modes" style="display: none;">
+        <a id="auto" class="bar" onclick="initMode(1)">auto</a>
+      </div>
+    </div>
+    <br>
     <div id="moves" style="display: none;">
-      <a id = "move0" class="bar" onclick="moveFront()" >front</a>
-      <a id = "move1" class="bar" onclick="moveLeft()" >left</a>
-      <a id = "move2" class="bar" onclick="moveRight()" >right</a>
-      <a id = "move3" class="bar" onclick="moveBack()" >back</a>
+      <a id = "move0" class="bar" onclick="moveFront()" >まえ</a>
+      <a id = "move1" class="bar" onclick="moveLeft()" >ひだり</a>
+      <a id = "move2" class="bar" onclick="moveRight()" >みぎ</a>
+      <a id = "move3" class="bar" onclick="moveBack()" >うしろ</a>
     </div>
   </div>
 </body>
