--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
   <script src="https://unpkg.com/three@0.131.3/examples/js/controls/OrbitControls.js"></script>
   <script src="variable.js"></script>
   <script src="moji.js"></script>
-  <script src="displayBtn.js"></script>
   <script src="botejin.js"></script>
   <script src="title.js"></script>
   <script src="select.js"></script>
@@ -30,14 +29,16 @@
       <div id="md-btn">
         <a id="auto-btn" class="btn" onclick="selectInit(1)">
           おーと
-          <span class="balloon">かってにうごく。
-            <br>おわったらふりーになる
+          <span class="balloon">
+            かってにうごく。<br>
+            おわったらふりーになる
           </span>
         </a>
         <a id="free-btn" class="btn" onclick="selectInit(2)">
           ふりー
-          <span class="balloon2">じぶんでうごかす。
-            <br>きゃらをかえられるよ
+          <span class="balloon2">
+            じぶんでうごかす。<br>
+            きゃらをかえられるよ
           </span>
         </a>
       </div>
@@ -68,6 +69,7 @@
       <a id = "move2" class="bar" onclick="moveRight()" >みぎ</a>
       <a id = "move3" class="bar" onclick="moveBack()" >うしろ</a>
       <a id="before2" class="bar" onclick="changeVal()">ちぇんじ</a>
+      <a id="exp" class="bar" onclick="expOnOff()">せつめい</a>
     </div>
   </div>
 </body>
